--- a/style.css
+++ b/style.css
@@ -25,14 +25,19 @@
 h1 {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 3rem; /* Ajuste cette taille selon tes besoins */
+
 }
 
 /* Cible spécifiquement le h1 dans la classe .brand si nécessaire */
 .brand h1 {
-	font-family: 'Montserrat', sans-serif; /* Assure-toi que la même police est utilisée */
-	font-size: 3rem; /* Ajuste cette taille pour correspondre au reste du site */
-	color: white; /* Si tu veux que le texte soit blanc */
+  font-style: italic;
+  font-weight: 700; /* Pour rendre le texte plus audacieux */
+  font-size: 3rem; /* Ajustez la taille selon vos préférences */
+  color: #3E3E3E; /* Une couleur subtile, ajustable selon vos goûts */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Effet d'ombre légère pour plus de profondeur */
 }
+
+
 
 html {
 	font-size: 10px;
